--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--TODO Step 2: Design the orders list fragment screen layout.-->
+<?xml version="1.0" encoding="utf-8"?><!--TODO Step 8: Design the screen layout for Sold Products Fragment.-->
 <!--START-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,10 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorOffWhite"
-    tools:context=".fragments.OrdersFragment">
+    tools:context=".fragments.SoldProductsFragment">
+
+    <TextView
+        android:id="@+id/tv_no_sold_products_found"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/no_products_sold_out_yet"
+        android:textAlignment="center"
+        android:textSize="@dimen/no_data_found_textSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_my_order_items"
+        android:id="@+id/rv_sold_product_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
@@ -19,20 +30,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_no_orders_found"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/no_orders_placed_yet"
-        android:textAlignment="center"
-        android:textColor="@color/colorSecondaryText"
-        android:textSize="@dimen/no_data_found_textSize"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
-    <!--END-->
+</androidx.constraintlayout.widget.ConstraintLayout><!--END-->
